# MT_AI_GBDT

./: .gitignore  pyproject.toml  readme.md
configs/model/: esmm.yaml  mtgbdt.yaml  stgbdt.yaml
notebooks/analysis/: exp1_prauc.ipynb  pre_analysis.ipynb  run_criteo_experiment.ipynb
reports/tables/: 260111_criteo_propose_experiment_results.csv  260111_criteo_propose_experiment_split_logs.csv  260113_criteo_propose_experiment_results.csv  260113_criteo_propose_experiment_split_logs.csv  260113_pcb_propose_experiment_results.csv  260113_pcb_propose_experiment_split_logs.csv  criteo_experiment.csv
scripts/: run_criteo_experiment.md  run_criteo_experiment.py
src/models/: base.py  config_loader.py  esmm.py  gbdt_proto.py  stgbdt.py  tree.py  tree_utils.py  utils.py
